Version 5.0.5 - event.relocated renamed to event.relocateEnd - added event.relocateBefore(div, to) - it's called before each element is relocated - added event.relocateAfter(div, to) - it's called after each element is relocated - added event.shiftOverflow - called after overflow happen in "shift" drop mode - fixed emptyCell - if TD contains only text then it will be treated as empty cell

--- a/example25/style.css
+++ b/example25/style.css
@@ -83,13 +83,14 @@ div#drag td {
 	background-color: #eee;
 }
 
-/* first dropDown menu */
-#dropDown1 {
+
+/* dropDown menu */
+#menuMode {
 	margin: 15px 0 0 15px;
 }
 
-/* second dropDown menu */
-#dropDown2 {
+/* first dropDown menu */
+#menuOperation {
 	margin: 15px 0 0 5px;
 }
 
